# pynative_apps

./: README.md  alembic.ini  app.py  my_exceptions.py  notes  pynative.db  pyproject.toml
api/v1/: ads.py  users.py
migrations/: env.py
migrations/versions/: .f6061f55151b_initial_migrations.py.swp  1518ebe8ce2e_add_api_release_info.py  4feb3a4ac30f_create_advertisements_table.py  5ea0d6685413_create_table_users.py  f6061f55151b_initial_migrations.py
models/: __init__.py  ads.py  sqlite_sql.py  users.py
tests/: conftest.py
use_cases/: ads.py  users.py
